force-app/main/default/objects/Resources__c/Resources__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Resources ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>