force-app/main/default/objects/Resources__c/fields/Project_Percentage_Comittment__c.field-meta.xml
<CustomField>
    <fullName>Project_Percentage_Comittment__c</fullName>
    <label>Project Percentage Comittment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>