force-app/main/default/objects/Resources__c/listViews/Resources.listView-meta.xml
<ListView>
    <fullName>Resources</fullName>
    <columns>User__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Resources</label>
</ListView>